--- a/Proyecto_integrador/app/src/main/AndroidManifest.xml
+++ b/Proyecto_integrador/app/src/main/AndroidManifest.xml
@@ -16,6 +16,15 @@
             android:name=".LoginActivity"
             android:exported="false" />
         <activity
+            android:name=".RegistroActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RegistrarseActivity"
+            android:exported="false" />
+        <activity
+            android:name=".HomeActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.ProyectoIntegrador">
