--- a/Proyecto_integrador/app/src/main/AndroidManifest.xml
+++ b/Proyecto_integrador/app/src/main/AndroidManifest.xml
@@ -42,6 +42,10 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDiv2GUIXZs7NlRpHpuymwq-9ARLuH1P54" />
     </application>
 
 </manifest>
